--- a/blog/templates/blog/address_list.html
+++ b/blog/templates/blog/address_list.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     {% for address in address %}
+    {% if user.is_authenticated %}
         <div class="page-header">
             <h1><a href="{% url 'address_detail' pk=address.pk %}">{{ address.name }}</a></h1>
         </div>
@@ -9,7 +10,7 @@
             <p>연락처1 : {{ address.phone_number }}</p>
             <p>연락처2 : {{ address.home_number }}</p>
             <p>이메일 : {{ address.email }}</p>
-            <br>
         </div>
+    {% endif %}
     {% endfor %}
 {% endblock %}
